// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"sourceMap" options should generate nested source maps when value is "true": css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.some-class {
  margin: 10px;
}
"
`;

exports[`"sourceMap" options should generate nested source maps when value is "true": errors 1`] = `[]`;

exports[`"sourceMap" options should generate nested source maps when value is "true": source map 1`] = `
{
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "names": [],
  "sourceRoot": "",
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map/index.styl",
  ],
  "sourcesContent": [
    ".other
	font-family serif",
    "border-radius()
  -webkit-border-radius arguments
  -moz-border-radius arguments
  border-radius arguments

body
  font 12px Helvetica, Arial, sans-serif

a.button
  border-radius 5px",
    "@import 'in-paths'
@import '../basic'

.some-class
  margin: 10px
",
  ],
  "version": 3,
}
`;

exports[`"sourceMap" options should generate nested source maps when value is "true": warnings 1`] = `[]`;

exports[`"sourceMap" options should generate source maps when the "devtool" value is "source-map": css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.some-class {
  margin: 10px;
}
"
`;

exports[`"sourceMap" options should generate source maps when the "devtool" value is "source-map": errors 1`] = `[]`;

exports[`"sourceMap" options should generate source maps when the "devtool" value is "source-map": source map 1`] = `
{
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "names": [],
  "sourceRoot": "",
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map.styl",
  ],
  "sourcesContent": [
    ".other
	font-family serif",
    "border-radius()
  -webkit-border-radius arguments
  -moz-border-radius arguments
  border-radius arguments

body
  font 12px Helvetica, Arial, sans-serif

a.button
  border-radius 5px",
    "@import 'in-paths'
@import 'basic'

.some-class
  margin: 10px
",
  ],
  "version": 3,
}
`;

exports[`"sourceMap" options should generate source maps when the "devtool" value is "source-map": warnings 1`] = `[]`;

exports[`"sourceMap" options should generate source maps when value is "true" and the "devtool" value is "false": css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.some-class {
  margin: 10px;
}
"
`;

exports[`"sourceMap" options should generate source maps when value is "true" and the "devtool" value is "false": errors 1`] = `[]`;

exports[`"sourceMap" options should generate source maps when value is "true" and the "devtool" value is "false": source map 1`] = `
{
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "names": [],
  "sourceRoot": "",
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map.styl",
  ],
  "sourcesContent": [
    ".other
	font-family serif",
    "border-radius()
  -webkit-border-radius arguments
  -moz-border-radius arguments
  border-radius arguments

body
  font 12px Helvetica, Arial, sans-serif

a.button
  border-radius 5px",
    "@import 'in-paths'
@import 'basic'

.some-class
  margin: 10px
",
  ],
  "version": 3,
}
`;

exports[`"sourceMap" options should generate source maps when value is "true" and the "devtool" value is "false": warnings 1`] = `[]`;

exports[`"sourceMap" options should generate source maps when value is "true": css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.some-class {
  margin: 10px;
}
"
`;

exports[`"sourceMap" options should generate source maps when value is "true": errors 1`] = `[]`;

exports[`"sourceMap" options should generate source maps when value is "true": source map 1`] = `
{
  "mappings": "AAAA;EACC,aAAY,MAAZ;;ACID;EACE,MAAmB,kCAAnB;;AAEF;EAPE,uBAAsB,IAAtB;EACA,oBAAmB,IAAnB;EACA,eAAc,IAAd;;ACAF;EACE,QAAQ,KAAR",
  "names": [],
  "sourceRoot": "",
  "sources": [
    "test/fixtures/paths/in-paths.styl",
    "test/fixtures/basic.styl",
    "test/fixtures/source-map.styl",
  ],
  "sourcesContent": [
    ".other
	font-family serif",
    "border-radius()
  -webkit-border-radius arguments
  -moz-border-radius arguments
  border-radius arguments

body
  font 12px Helvetica, Arial, sans-serif

a.button
  border-radius 5px",
    "@import 'in-paths'
@import 'basic'

.some-class
  margin: 10px
",
  ],
  "version": 3,
}
`;

exports[`"sourceMap" options should generate source maps when value is "true": warnings 1`] = `[]`;

exports[`"sourceMap" options should not generate source maps when the "devtool" value is "false": css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.some-class {
  margin: 10px;
}
"
`;

exports[`"sourceMap" options should not generate source maps when the "devtool" value is "false": errors 1`] = `[]`;

exports[`"sourceMap" options should not generate source maps when the "devtool" value is "false": warnings 1`] = `[]`;

exports[`"sourceMap" options should not generate source maps when value is "false" and the "devtool" value is "source-map": css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.some-class {
  margin: 10px;
}
"
`;

exports[`"sourceMap" options should not generate source maps when value is "false" and the "devtool" value is "source-map": errors 1`] = `[]`;

exports[`"sourceMap" options should not generate source maps when value is "false" and the "devtool" value is "source-map": warnings 1`] = `[]`;

exports[`"sourceMap" options should not generate source maps when value is "false": css 1`] = `
".other {
  font-family: serif;
}
body {
  font: 12px Helvetica, Arial, sans-serif;
}
a.button {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}
.some-class {
  margin: 10px;
}
"
`;

exports[`"sourceMap" options should not generate source maps when value is "false": errors 1`] = `[]`;

exports[`"sourceMap" options should not generate source maps when value is "false": warnings 1`] = `[]`;
